Enhance CORS configuration with dynamic frontend URL
Added frontend URL configuration to allow dynamic CORS origins and updated allowed methods.